--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@armathai/lego-logger": "^4.0.0",
         "@armathai/pixi-grid": "^6.0.1",
         "@pixi/core": "^7.3.2",
+        "animejs": "^3.2.2",
         "howler": "^2.2.3",
         "pixi.js": "^7.3.2"
     }
